# dbt-tutorial-course

./: pyproject.toml
lessons/: dbt_project.yml
lessons/models/marts/: dim_orders.sql
lessons/models/staging/: stg_ecommerce__order_items.sql  stg_ecommerce__order_items.yml  stg_ecommerce__orders.yml  stg_ecommerce__products.sql
