[tool.poetry]
name = "dbt-tutorial-course"
version = "0.1.0"
description = ""
authors = ["Cristian Abrante <cristian@abrante.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dbt_tutorial_course"}]

[tool.poetry.dependencies]
python = "3.10.10"
dbt-bigquery = "1.4.1"
google-api-core = "2.8.2"
google-auth = "2.9.0"
google-auth-oauthlib = "0.5.2"
google-cloud-bigquery = "3.5.0"
google-cloud-bigquery-storage = "2.14.2"
google-cloud-core = "2.3.1"
google-cloud-dataproc = "5.0.3"
google-cloud-storage = "2.5.0"
google-crc32c = "1.3.0"
google-resumable-media = "2.3.3"
googleapis-common-protos = "1.56.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
